# ebql-benchmarks

./: Cargo.toml
bpf/: prog1.bpf.c  vmlinux.h
common/: Cargo.toml
common/src/: bpf_prog.rs  bpf_stats.rs  bpf_structs.rs  lib.rs  prog_stats.rs
ebpf-probe-pread/: Cargo.toml  build.rs
ebpf-probe-pread/src/: main.rs
ebpf-probe-pread/src/bpf/ebql/: agg_pread_query.bpf.h  pread_query.bpf.c  pread_query.bpf.h
ebpf-probe-pread/src/bpf/opt/: pread_query.bpf.c  pread_query_next.bpf.c
ebpf-probe-pread/src/bpf/unopt/: pread_query.bpf.c
ebql-probe-pread-1/: Cargo.toml  build.rs
ebql-probe-pread-1/src/: main.rs
ebql-probe-pread-1/src/bpf/: agg_pread_query.bpf.h  pread_query.bpf.c  pread_query.bpf.h  tumbling_window_pread_query.bpf.h
rocksdb-application/: Cargo.toml
rocksdb-application/src/: main.rs  request_stat.rs
scripts/: benchmark_1.sh  benchmark_2.sh  build_all.sh  common.sh  cpu_time_ebql_probe.sh
viz/: b2-vals.csv  compute_avg_utime_stime.py  compute_throughput_overhead.py  plot_cycles.py  plot_quantiles.py  plot_rocksdb_quantiles.py  plot_rocksdb_throughput.py  plot_throughput.py
