[package]
name = "ebpf-probe-pread"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
crossbeam = "0.8.4"
ctrlc = "3.4.4"
env_logger = "0.11.3"
libbpf-rs = "0.23.0"
libc = "0.2.153"
log = "0.4.21"
common = { path = "../common" }
clap = { version = "4.5.4", features = ["derive"] }

[build-dependencies]
libbpf-cargo = "0.23.0"
