[package]
name = "rocksdb-application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zipf = "7.0.0"
rand = "0.8.5"
ctrlc = "3.4.0"
crossbeam = "0.8.2"
lazy_static = "1.4.0"
chrono = "0.4.26"
libc = "0.2"
clap = { version = "4.5.4", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4"] }
memcache = "0.17.0"
rocksdb = "0.22.0"
serde = { version = "1.0.197", features = ["derive"] }
